# python-activerecord-snowflake

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: .gitignore  architecture.md  backend_development.md  code_style.md  snowflake_backend.md  testing.md
.claude/commands/: check-sync-async.md  gen-migration.md  gen-model.md  gen-query.md  gen-relation.md  lint-fix.md  lint.md  new-backend.md  new-feature.md  test-feature.md  test.md  type-check.md  validate-model.md
.github/workflows/: publish.yml  test.yml
changelog.d/: README.md  template.md
src/rhosocial/activerecord/backend/impl/snowflake/: __init__.py  __main__.py  adapters.py  async_backend.py  async_transaction.py  backend.py  config.py  dialect.py  field.py  mixins.py  protocols.py  transaction.py  types.py
src/rhosocial/activerecord/backend/impl/snowflake/cli/: __init__.py  connection.py  info.py  introspect.py  output.py
src/rhosocial/activerecord/backend/impl/snowflake/examples/: __init__.py
src/rhosocial/activerecord/backend/impl/snowflake/examples/named_connections/: __init__.py  connections.py
src/rhosocial/activerecord/backend/impl/snowflake/examples/named_procedures/: __init__.py  etl_workflow.py
src/rhosocial/activerecord/backend/impl/snowflake/examples/named_queries/: __init__.py  snow_queries.py
src/rhosocial/activerecord/backend/impl/snowflake/introspection/: __init__.py  introspector.py
tests/: conftest.py
tests/integration/: conftest.py
tests/mock/: conftest.py
tests/providers/: __init__.py  basic.py  basic_connection.py  events.py  mixins.py  query.py  query_connection.py  registry.py  scenarios.py
tests/rhosocial/activerecord_snowflake_test/feature/backend/: conftest.py  test_adapters.py  test_backend_mock.py  test_config.py  test_dialect.py  test_introspection.py  test_protocol_conformance.py  test_types.py
tests/rhosocial/activerecord_snowflake_test/feature/basic/: conftest.py  test_crud.py  test_field_column_mapping.py  test_fields.py  test_type_adapter.py  test_validation.py
tests/rhosocial/activerecord_snowflake_test/feature/basic/connection/: conftest.py  test_active_record_context.py  test_active_record_crud.py
tests/rhosocial/activerecord_snowflake_test/feature/basic/schema/: column_mapping_items.sql  comments.sql  mixed_annotation_items.sql  posts.sql  type_adapter_tests.sql  type_cases.sql  type_tests.sql  users.sql  validated_field_users.sql  validated_users.sql
tests/snowflake_fakesnow/: conftest.py  test_fakesnow_connection.py
